--- a/public/sc/pink.css
+++ b/public/sc/pink.css
@@ -23,7 +23,7 @@ textarea:focus {
 }
 a.main-button,
 input[type="submit"] {
-  background-color: #f3723f;
+  background-color: #53c68c;
 }
 .slicknav_btn {
   border-color: #f1505b;
