--- a/public/sc/pink.css
+++ b/public/sc/pink.css
@@ -13,7 +13,7 @@ a {
 }
 .form-control:focus,
 textarea:focus {
-  border: 1px solid #0abc9a;
+  border: 1px solid #fa7e29;
 }
 .section-overlay {
   background-color: #f1505b;
@@ -23,7 +23,13 @@ textarea:focus {
 }
 a.main-button,
 input[type="submit"] {
-  background-color: #53c68c;
+  background: linear-gradient(180deg, #fa7e29 0%, #F6682F 80%, #F6682F 100%);
+    border: 0;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-transform: none;
+    border: 1px solid #cd3f06;
+    height: 38px;
 }
 .slicknav_btn {
   border-color: #f1505b;
